[package]
name = "glsp"
version = "0.1.0"
authors = ["Will Marringa <wmarringa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.8"
json = "0.12.0"
clap = { version = "2.33.0", features = ["yaml"] }